# fastapi-seed

./: .gitignore  CONTRIBUTING.md  LICENSE  README.md  TEAM.md  pyproject.toml
.github/workflows/: ci.yml
docker-test/: Dockerfile.full  Dockerfile.no-git  Dockerfile.no-uv  run.sh
src/fastapi_seed/: cli.py  generator.py  prompts.py
src/fastapi_seed/templates/: .env.example.jinja2  .env.jinja2  .gitignore.jinja2  Dockerfile.jinja2  Makefile.jinja2  README.md.jinja2  docker-compose.yml.jinja2  pyproject.toml.jinja2
src/fastapi_seed/templates/.github/workflows/: ci.yml.jinja2
src/fastapi_seed/templates/app/: main.py.jinja2
src/fastapi_seed/templates/app/core/: config.py.jinja2  db.py.jinja2  logger.py.jinja2
src/fastapi_seed/templates/tests/: test_main.py.jinja2
src/fastapi_seed/templates/tests/load/: locustfile.py.jinja2
tests/: test_cli.py  test_generator.py
