[project]
name = "fastapi-seed"
version = "0.1.2"
description = "Scaffold FastAPI projects in seconds"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "typer>=0.12.0",
    "questionary>=2.0.1",
    "jinja2>=3.1.4",
    "rich>=13.7.0",
]

[dependency-groups]
dev = [
    "build>=1.4.0",
    "twine>=6.2.0",
    "pytest>=8.0.0",
    "ruff>=0.4.0",
]

[project.scripts]
fastapi-seed = "fastapi_seed.cli:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/fastapi_seed"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
line-length = 88
exclude = ["dist", ".venv"]
