[project]
name = "fastapi-seed"
version = "0.1.4"
description = "Scaffold FastAPI projects in seconds"
readme = "README.md"
requires-python = ">=3.13"
license = { text = "MIT" }
authors = [{ name = "Aayushmaan Hooda", email = "aayushmaanhooda@gmail.com" }]
keywords = ["fastapi", "scaffold", "boilerplate", "cli", "template"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Code Generators",
    "Framework :: FastAPI",
]
dependencies = [
    "typer>=0.12.0",
    "questionary>=2.0.1",
    "jinja2>=3.1.4",
    "rich>=13.7.0",
]

[project.urls]
Homepage = "https://github.com/aayushmaanhooda/fastapi-seed"
Repository = "https://github.com/aayushmaanhooda/fastapi-seed"
Issues = "https://github.com/aayushmaanhooda/fastapi-seed/issues"

[project.scripts]
fastapi-seed = "fastapi_seed.cli:app"

[dependency-groups]
dev = [
    "build>=1.4.0",
    "twine>=6.2.0",
    "pytest>=8.0.0",
    "ruff>=0.4.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/fastapi_seed"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
line-length = 88
exclude = ["dist", ".venv"]
